feat: configure Docker environment with Prisma Studio integration
- feat: fix Docker Compose configuration for PostgreSQL port mapping
- feat: add Prisma Studio port exposure (5555) to Docker Compose
- feat: create automated script for Prisma Studio in Docker environment
- feat: add npm script 'docker:studio' for easy Prisma Studio access
- feat: successfully run Prisma Studio in Docker container
- docs: add comprehensive Docker setup and usage documentation
- docs: include troubleshooting guide for Docker environment
- docs: provide development workflow with Docker

Docker environment now provides:
- Complete development environment with PostgreSQL
- Automated Prisma Studio access via npm run docker:studio
- Hot reload for development
- Isolated environment that works consistently across machines
- Prisma Studio available at http://localhost:5555

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"db:push": "prisma db push",
 		"db:migrate": "prisma migrate dev",
 		"db:seed": "tsx prisma/seed.ts",
-		"db:studio": "prisma studio"
+		"db:studio": "prisma studio",
+		"docker:studio": "./scripts/prisma-studio.sh"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
