feat: implement complete Mercado Pago integration for Argentina
- feat: add Mercado Pago SDK and API integration
- feat: create checkout API endpoint with ARS currency support
- feat: implement checkout form with DNI field for Argentina
- feat: add success, failure, and pending payment pages
- feat: create webhook endpoint for payment notifications
- feat: update Prisma schema with paymentId field for orders
- feat: add comprehensive payment flow with Mercado Pago
- feat: implement responsive UI with Tailwind CSS
- feat: add product display on homepage with checkout links
- docs: create complete Mercado Pago setup documentation
- chore: update environment variables for Mercado Pago integration

Complete payment integration includes:
- Checkout Pro with redirect to Mercado Pago
- ARS currency support for Argentina
- DNI field validation for local regulations
- Payment status tracking and webhook handling
- Responsive design with modern UI
- Comprehensive documentation and testing guide

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"db:migrate": "prisma migrate dev",
 		"db:seed": "tsx prisma/seed.ts",
 		"db:studio": "prisma studio",
-		"docker:studio": "./scripts/prisma-studio.sh"
+		"docker:studio": "./scripts/prisma-studio.sh",
+		"add-test-product": "tsx scripts/add-test-product.ts"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
@@ -47,6 +48,7 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^6.13.0",
+		"mercadopago": "^2.8.0",
 		"prisma": "^6.13.0"
 	}
 }
