--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
 		"@testing-library/jest-dom": "^6.6.4",
 		"@testing-library/svelte": "^5.2.8",
 		"@testing-library/user-event": "^14.6.1",
+		"@types/mercadopago": "^1.5.11",
 		"@types/node": "^24.2.0",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
 		"globals": "^16.0.0",
 		"jsdom": "^26.1.0",
+		"msw": "^2.10.4",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
@@ -53,7 +55,11 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^6.13.0",
+		"@stripe/stripe-js": "^7.8.0",
+		"lucide-svelte": "^0.536.0",
 		"mercadopago": "^2.8.0",
-		"prisma": "^6.13.0"
+		"prisma": "^6.13.0",
+		"stripe": "^18.4.0",
+		"svelte-sonner": "^1.0.5"
 	}
 }
