feat(frontend): implementar interfaz de usuario principal
- Añadidas páginas de catálogo y detalle de productos
- Implementado carrito de compras con gestión de estado
- Creado flujo de checkout básico
- Añadido panel de administración para gestión de productos, órdenes y cupones
- Implementado sistema de autenticación y perfiles de usuario
- Añadidas páginas de cuenta de usuario con historial de pedidos
- Creada página de búsqueda de productos
- Implementado diseño responsive con Tailwind CSS

Archivos principales:
- src/routes/productos/ - Catálogo y detalle de productos
- src/routes/carrito/ - Gestión del carrito de compras
- src/routes/checkout/ - Flujo de pago
- src/routes/admin/ - Panel de administración
- src/routes/cuenta/ - Perfil de usuario
- src/app.d.ts - Tipos globales de la aplicación
- src/hooks.server.ts - Manejo de autenticación

Tecnologías utilizadas:
- SvelteKit para el enrutamiento
- Tailwind CSS para estilos
- TypeScript para tipado estático
- Prisma (configuración inicial)
- JWT para autenticación

--- a/package.json
+++ b/package.json
@@ -3,14 +3,23 @@
     "private": true,
     "type": "module",
     "scripts": {
-      "dev": "vite",
-      "build": "vite build",
-      "preview": "vite preview --host 0.0.0.0 --port 5173"
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview --host 0.0.0.0 --port 5173"
     },
     "devDependencies": {
-      "@sveltejs/kit": "latest",
-      "svelte": "latest",
-      "vite": "latest"
+        "@sveltejs/kit": "latest",
+        "@types/uuid": "^10.0.0",
+        "svelte": "latest",
+        "vite": "latest"
+    },
+    "dependencies": {
+        "@prisma/client": "^6.13.0",
+        "argon2": "^0.43.1",
+        "jose": "^6.0.12",
+        "mercadopago": "^2.8.0",
+        "prisma": "^6.13.0",
+        "uuid": "^11.1.0",
+        "zod": "^4.0.17"
     }
-  }
-  
+}
