--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
         "preview": "vite preview --host 0.0.0.0 --port 5173"
     },
     "devDependencies": {
-        "@sveltejs/kit": "latest",
+        "@sveltejs/adapter-auto": "^6.0.2",
+        "@sveltejs/kit": "^2.27.3",
+        "@sveltejs/vite-plugin-svelte": "^6.1.1",
         "@types/uuid": "^10.0.0",
-        "svelte": "latest",
-        "vite": "latest"
+        "svelte": "^5.38.0",
+        "typescript": "^5.9.2",
+        "vite": "^7.1.1"
     },
     "dependencies": {
         "@prisma/client": "^6.13.0",
